--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
         "@types/jest": "^28.1.8",
         "@types/node": "^17.0.44",
         "@types/supertest": "^2.0.12",
+        "@types/ws": "^8.5.4",
         "@typescript-eslint/eslint-plugin": "^5.28.0",
         "@typescript-eslint/parser": "^5.28.0",
+        "clean-webpack-plugin": "^4.0.0",
         "cross-env": "^7.0.3",
         "eslint": "^8.17.0",
         "eslint-config-prettier": "^8.5.0",
@@ -32,7 +34,8 @@
     },
     "dependencies": {
         "@nut-tree/nut-js": "^2.3.0",
-        "ws": "^8.8.0",
-        "dotenv": "^16.0.1"
+        "dotenv": "^16.0.1",
+        "jimp": "^0.16.2",
+        "ws": "^8.8.0"
     }
 }
